--- a/app/assets/sass/dashboard/custom/_card.scss
+++ b/app/assets/sass/dashboard/custom/_card.scss
@@ -1,11 +1,11 @@
 .card{
-    background: $card-black-background;
+    background: $card-yellow-background;
     border: 0;
     position: relative;
     width: 100%;
     margin-bottom: 30px;
     box-shadow: $box-shadow;
-
+    border-radius: 30px;
 
     label{
       color: rgba($white, 0.6);
@@ -50,9 +50,10 @@
       }
 
       .card-category{
-        color: $dark-gray;
+        color: $title-brown;
+        font-size: 20px;
         margin-bottom: 5px;
-        font-weight: 300;
+        font-weight: 600;
       }
     }
 
